<resources>
    <string name="dialog_general_button_close">Close</string>
    <string name="dialog_general_button_cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dialog_converting_saved_games_title">Upgrading new version</string>
    <string name="dialog_converting_saved_games_message">For this new version of MathDoku+, your saved puzzles are now being converted (one time only).</string>
    <string name="puzzle_help_dialog_leadin">Thanks for installing MathDoku+ for Android.</string>
    <string name="puzzle_help_dialog_help_section_title">Help</string>
    <string name="puzzle_help_dialog_goal_section_title">Your goal</string>
    <string name="puzzle_help_dialog_goal_section_body">Fill in each row and column with digits from 1 to grid size.\n\nDigits can and must be used only once per row and column.\n\nThick lines indicate \'cages\' - each cage has an arithmetic puzzle, which must be solved by the digits in the cage, e.g. \'5+\' means all digits in that cage add to 5. The order in which the digits are used in the cage is not relevant.\n\nDigits can be used more than once per cage, so long as there is only one of a digit per row or column.</string>
    <string name="puzzle_help_dialog_how_to_play__section_title">How to play</string>
    <string name="puzzle_help_dialog_how_to_play_section_body">Touch to select a cell in the grid, then either swipe towards a digit to select it, or touch the button with the number you\'d like to insert. By double tapping a cell you can switch between the \'normal\' and the \'maybe\' mode. In \'maybe\' mode you can mark multiple possibilities for the cell.\n\nPuzzles will be saved automatically.</string>
    <string name="puzzle_help_dialog_version_section_title">Version</string>
    <string name="puzzle_help_dialog_license_section_title">License</string>
    <string name="puzzle_help_dialog_project_home_section_title">Project Home</string>
    <string name="puzzle_help_dialog_contributors_section_title">Contributors</string>
    <string name="puzzle_help_dialog_contributors_mathdoku_plus_section_title">Contributors Mathdoku+</string>
    <string name="puzzle_help_dialog_contributors_mathdoku_plus_section_body">MathDoku+ is a fork of Mathdoku version 2.0.1. This fork is maintained by Paul Dingemans who was the main developer for the Mathdoku versions 1.96 (released in May 2013) and 2.0.0 (released in September 2013). Mathdoku+ has an own separate development track.</string>
    <string name="puzzle_help_dialog_contributors_mathdoku_section_title">Contributors Mathdoku (original)</string>
    <string name="puzzle_help_dialog_contributors_mathdoku_section_body">MathDoku was initially developed by Ben Buxton. Contributions have been made by: Stephen Lee, Pimm Hogeling, Paul Dingemans, Anthony Paul, Christoph Steindl and Alexander Tesfamichael. Also we would like to thank all users who have submitted bugs and feature requests.</string>
    <string name="choose_input_method_title">Choose input method</string>
    <string name="input_method_lead_in_body">Mathdoku+ supports two different methods of input. Please choose your input method now or try them both at the same time. You can change the input method via the settings menu.</string>
    <string name="input_method_swipe_explanation_title">Swipe</string>
    <string name="input_method_swipe_explanation_body">The modern way to select digits using swipe. Touch a cell and swipe towards a digit in the displayed circle to select it. This method allows you to better concentrate on the puzzle as you do not have to look at another part of the screen to select a digit.</string>
    <string name="input_method_buttons_explanation_title">Buttons</string>
    <string name="input_method_buttons_explanation_body">The traditional way to select digits by tapping buttons below or on the right side of the puzzle. This method is easier to use when not familiar with swiping and does allow for two handed playing. As of this it is preferred by players who strive for the fastest time to solve a puzzle.</string>
    <string name="google_plus_login_dialog_title">Sign in with Google+</string>
    <string name="google_plus_login_dialog_on_game_completion">You have just finished a puzzle without using any cheats. If you want, you can submit your score to the Google+ leaderboards. This will give you the opportunity to compare your score with scores of other players. Isn\'t that great?\n\nTo submit a score to Google+, you have to sign in with your Google+ account (no password is asked) one time only. After signing in for the first time, Google+ will guide for further configurations.\n\nYou can sign out anytime via the actions menu in case you no longer want stay logged in.</string>
    <string name="google_plus_login_hide_till_next_top_score_achieved">Do not show again till a new top score is achieved</string>
    <string name="google_plus_login_dialog_on_show_leaderboards">To view the leaderboards, you have to sign in with Google+ (no password is asked). The leaderboards overview shows your best score and your ranking position for each type of puzzle.\n\nAfter signing in for the first time, Google+ will guide for further configurations. For each type of puzzle, the puzzle with the best score is submitted to Google+. Puzzles for which one or more cheats have been used will be ignored.\n\nYou can sign out anytime via the actions menu in case you no longer want stay logged in.</string>
    <string name="action_google_plus_community">MathDoku+ community</string>
    <string name="action_bar_subtitle_puzzle_fragment">Play a puzzle</string>
    <string name="action_archive">Archive</string>
    <string name="action_cheats">Cheats</string>
    <string name="action_clear_grid">Clear grid</string>
    <string name="action_replay">Replay this puzzle</string>
    <string name="action_new_puzzle">New puzzle</string>
    <string name="action_check_progress">Check progress</string>
    <string name="action_statistics">Statistics</string>
    <string name="action_leaderboards">Leaderboards</string>
    <string name="action_help">Help</string>
    <string name="action_share">Share</string>
    <string name="action_feedback">Send feedback</string>
    <string name="action_sign_out_google_play_services">Sign out Google+</string>
    <string name="action_reveal_cell">Reveal cell</string>
    <string name="action_reveal_operator">Reveal operator</string>
    <string name="action_show_solution">Show solution</string>
    <string name="action_refresh_leaderboards">Refresh</string>
    <string name="dialog_puzzle_parameters_title">Create new puzzle</string>
    <string name="dialog_puzzle_parameters_puzzle_size">Puzzle size</string>
    <string name="dialog_puzzle_parameters_operators_in_cage_visible">Operators in cage visible</string>
    <string name="dialog_puzzle_parameters_difficulty">Difficulty</string>
    <string name="dialog_puzzle_parameters_neutral_button">Generate</string>
    <string name="dialog_building_puzzle_title">Building puzzle</string>
    <string name="dialog_building_puzzle_message">A new puzzle is being built. It will be ready in a few seconds.</string>
    <string name="general_settings_actionbar_title">General settings</string>
    <string name="puzzle_setting_group_assistance">Assistance</string>
    <string name="puzzle_setting_bad_cage_math_visible_title">Mark bad maths</string>
    <string name="puzzle_setting_bad_cage_math_visible_summary">Highlight cages with incorrect maths</string>
    <string name="puzzle_setting_duplicate_digits_visible_title">Mark duplicates</string>
    <string name="puzzle_setting_duplicate_digits_visible_summary">Highlight duplicate digits in a row or column</string>
    <string name="puzzle_setting_clear_maybes_title">Clear maybes</string>
    <string name="puzzle_setting_clear_maybes_summary">Clear maybes when used in another cell on the same row or column</string>
    <string name="puzzle_setting_group_display">Display</string>
    <string name="puzzle_setting_theme_title">Theme</string>
    <string name="puzzle_setting_colored_digits_title">Colored digits</string>
    <string name="puzzle_setting_colored_digits_summary">Use colored digits to distinguish maybe numbers from normal numbers</string>
    <string name="puzzle_setting_maybes_displayed_in_grid_title">Maybes in grid</string>
    <string name="puzzle_setting_maybes_displayed_in_grid_summary">Display maybe numbers in a grid</string>
    <string name="puzzle_setting_timer_visible_title">Display timer</string>
    <string name="puzzle_setting_timer_visible_summary">Display a timer while solving a puzzle</string>
    <string name="puzzle_setting_full_screen_title">Full screen</string>
    <string name="puzzle_setting_full_screen_summary">Play in full screen mode by hiding Android\'s notification bar</string>
    <string name="puzzle_setting_wake_lock_title">Keep screen on</string>
    <string name="puzzle_setting_wake_lock_summary">Prevent the screen from going off while playing</string>
    <string name="puzzle_setting_group_input">Entering digits</string>
    <string name="puzzle_setting_input_method">Input method</string>
    <string name="input_method_swipe_only">Swipe only</string>
    <string name="input_method_swipe_and_buttons">Swipe and buttons</string>
    <string name="input_method_buttons_only">Buttons only</string>
    <string name="puzzle_setting_outer_swipe_circle_title">Double swipe circle</string>
    <string name="puzzle_setting_outer_swipe_circle_visible_from_grid_size_short">Size %1$d and above</string>
    <string name="puzzle_setting_outer_swipe_circle_visible_from_grid_size_long">Display a second swipe circle for puzzles of size %1$d and above</string>
    <string name="puzzle_setting_outer_swipe_circle_visible_never">Never display a second swipe circle</string>
    <string name="puzzle_setting_group_sound">Sound</string>
    <string name="puzzle_setting_sound_effects_title">Sound effects</string>
    <string name="puzzle_setting_sound_effects_summary">Enable the sound effects</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="dialog_reveal_solution_confirmation_title">Reveal solution?</string>
    <string name="dialog_reveal_solution_confirmation_message">Are you sure you want to reveal the solution of this puzzle?</string>
    <string name="dialog_reveal_solution_confirmation_negative_button">No, I\'ll solve it myself</string>
    <string name="dialog_reveal_solution_confirmation_positive_button">Yes, I give up</string>
    <string name="dialog_clear_grid_confirmation_title">Clear entire grid?</string>
    <string name="dialog_clear_grid_confirmation_message">Are you sure you want to clear the entire grid?</string>
    <string name="dialog_clear_grid_confirmation_negative_button">No, leave it</string>
    <string name="dialog_clear_grid_confirmation_positive_button">Yes, start over</string>
    <string name="main_ui_clear">Clear</string>
    <string name="main_ui_undo">Undo</string>
    <string name="action_copy_cell_values_long_description">Copy values of the selected cell to other cells.</string>
    <string name="archive_settings_show_status_filter_title">Show status filter</string>
    <string name="archive_settings_show_status_filter_enabled">Allows filtering by status</string>
    <string name="archive_settings_show_grid_type_filter_title">Show size filter</string>
    <string name="archive_settings_show_grid_type_filter_enabled">Allows filtering by size</string>
    <string name="archive_setting_show_chart_description_title">Chart description</string>
    <string name="archive_setting_show_chart_description_summary">Display description below chart</string>
    <string name="main_ui_solved_messsage">Solved!</string>
</resources>