<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_copy_cell_values"
        android:icon="@drawable/copy_cell_values"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/action_copy_cell_values_long_description"/>

    <!-- Title and icon for action_input_mode will be set programmatically. -->
    <item
        android:id="@+id/action_input_mode"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        tools:ignore="MenuTitle"/>
    <item
        android:id="@+id/checkprogress"
        android:icon="@drawable/menu_check_progress"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/action_check_progress"/>
    <item
        android:id="@+id/action_cheat"
        android:orderInCategory="10"
        android:showAsAction="never"
        android:title="@string/action_cheats">
        <menu>
            <item
                android:id="@+id/action_reveal_cell"
                android:title="@string/action_reveal_cell"/>
            <item
                android:id="@+id/action_reveal_operator"
                android:title="@string/action_reveal_operator"/>
            <item
                android:id="@+id/action_show_solution"
                android:title="@string/action_show_solution"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_clear_grid"
        android:orderInCategory="20"
        android:showAsAction="never"
        android:title="@string/action_clear_grid"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/social_share"
        android:orderInCategory="80"
        android:showAsAction="never"
        android:title="@string/action_share"/>

    <!-- Replay will only be displayed for the archive fragment. -->
    <item
        android:id="@+id/action_replay"
        android:icon="@drawable/replay"
        android:orderInCategory="89"
        android:showAsAction="ifRoom"
        android:title="@string/action_replay"/>
    <item
        android:id="@+id/action_new_game"
        android:icon="@drawable/content_new"
        android:orderInCategory="90"
        android:showAsAction="ifRoom"
        android:title="@string/action_new_puzzle"/>
    <item
        android:id="@+id/action_sign_out_google_play_services"
        android:orderInCategory="97"
        android:showAsAction="never"
        android:title="@string/action_sign_out_google_play_services"/>
    <item
        android:id="@+id/action_google_plus_community"
        android:orderInCategory="97"
        android:showAsAction="never"
        android:title="@string/action_google_plus_community"/>
    <item
        android:id="@+id/action_puzzle_settings"
        android:orderInCategory="98"
        android:showAsAction="never"
        android:title="@string/settings"/>
    <item
        android:id="@+id/action_send_feedback"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/action_feedback"/>
    <item
        android:id="@+id/action_puzzle_help"
        android:icon="@drawable/help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_help"/>

</menu>