<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Keep value of key in sync with class preferences -->
    <CheckBoxPreference
        android:key="archive_setting_status_filter_visible"
        android:summary="@string/archive_settings_show_status_filter_enabled"
        android:title="@string/archive_settings_show_status_filter_title"/>

    <!-- Keep value of key in sync with class preferences -->
    <CheckBoxPreference
        android:key="archive_setting_grid_type_filter_visible"
        android:summary="@string/archive_settings_show_grid_type_filter_enabled"
        android:title="@string/archive_settings_show_grid_type_filter_title"/>

    <!-- Keep value of key in sync with class preferences -->
    <CheckBoxPreference
        android:key="archive_setting_chart_description_visible"
        android:summary="@string/archive_setting_show_chart_description_summary"
        android:title="@string/archive_setting_show_chart_description_title"/>

</PreferenceScreen>