<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_method_lead_in_body"
            android:textSize="@dimen/dialog_text_size_body" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/input_method_swipe_explanation_title"
            android:textSize="@dimen/dialog_text_size_heading1"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_method_swipe_explanation_body"
            android:textSize="@dimen/dialog_text_size_body" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/input_method_buttons_explanation_title"
            android:textSize="@dimen/dialog_text_size_heading1"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_method_buttons_explanation_body"
            android:textSize="@dimen/dialog_text_size_body" />
    </LinearLayout>

</ScrollView>