<!-- Background of the top layout has been set to black to solve an issue with -->
<!-- subtle color differences between the relative and the linear layouts. -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:mathdoku="http://schemas.android.com/apk/res-auto"
                android:id="@+id/topLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000"
                tools:ignore="Overdraw">

    <RelativeLayout
        android:id="@+id/timer_ticker_tape_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/timerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:lines="1"
            android:textSize="@dimen/text_size_default"
            android:textStyle="bold"/>

        <net.mathdoku.plus.tickertape.TickerTape
            android:id="@+id/tickerTape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="1dp"
            android:textIsSelectable="false"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/puzzleGrid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/controlsPadBigTableLayout"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/timer_ticker_tape_layout"
        android:paddingTop="1dp"
        android:visibility="gone">

        <net.mathdoku.plus.puzzle.ui.GridPlayerRelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/grid_player_view"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/grid_player_view"
            mathdoku:layout_alignGridPlayerViewLeft="visible_grid"
            mathdoku:layout_alignGridPlayerViewRight="visible_grid">

            <LinearLayout
                android:id="@+id/controlsSwipeOnly"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:visibility="gone">

                <Button
                    android:id="@+id/clearButtonSwipeOnly"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/controls_pad_margin_buttons"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:minHeight="@dimen/controls_pad_min_height_buttons"
                    android:text="@string/main_ui_clear"
                    android:textSize="@dimen/controls_text_size_default"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle"/>

                <Button
                    android:id="@+id/undoButtonSwipeOnly"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/controls_pad_margin_buttons"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:minHeight="@dimen/controls_pad_min_height_buttons"
                    android:text="@string/main_ui_undo"
                    android:textSize="@dimen/controls_text_size_default"
                    android:textStyle="bold"
                    tools:ignore="ButtonStyle"/>
            </LinearLayout>
        </net.mathdoku.plus.puzzle.ui.GridPlayerRelativeLayout>

        <net.mathdoku.plus.puzzle.ui.GridPlayerView
            android:id="@+id/grid_player_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/solvedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_ui_solved_messsage"
            android:textSize="@dimen/text_size_giant"
            android:visibility="gone"/>
    </RelativeLayout>

    <TableLayout
        android:id="@+id/controlsPadBigTableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:paddingTop="3dp"
        android:weightSum="3">

        <TableRow
            android:id="@+id/controlsButtonRow1"
            android:layout_weight="1">

            <Button
                android:id="@+id/digitPosition1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/controls_pad_margin_buttons"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:minHeight="@dimen/controls_pad_min_height_buttons"
                android:textSize="@dimen/controls_text_size_default"
                android:textStyle="bold"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/digitPosition2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/controls_pad_margin_buttons"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:minHeight="@dimen/controls_pad_min_height_buttons"
                android:textSize="@dimen/controls_text_size_default"
                android:textStyle="bold"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/digitPosition3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/controls_pad_margin_buttons"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:minHeight="@dimen/controls_pad_min_height_buttons"
                android:textSize="@dimen/controls_text_size_default"
                android:textStyle="bold"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/clearButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/controls_pad_margin_buttons"
                android:layout_weight="1.5"
                android:background="@drawable/button"
                android:lines="1"
                android:minHeight="@dimen/controls_pad_min_height_buttons"
                android:text="@string/main_ui_clear"
                android:textSize="@dimen/controls_text_size_default"
                android:textStyle="bold"
                tools:ignore="ButtonStyle"/>
        </TableRow>

        <TableRow
            android:id="@+id/controlsButtonRow2"
            android:layout_weight="1">

            <Button
                android:id="@+id/digitPosition4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/controls_pad_margin_buttons"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:minHeight="@dimen/controls_pad_min_height_buttons"
                android:textSize="@dimen/controls_text_size_default"
                android:textStyle="bold"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/digitPosition5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/controls_pad_margin_buttons"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:minHeight="@dimen/controls_pad_min_height_buttons"
                android:textSize="@dimen/controls_text_size_default"
                android:textStyle="bold"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/digitPosition6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/controls_pad_margin_buttons"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:minHeight="@dimen/controls_pad_min_height_buttons"
                android:textSize="@dimen/controls_text_size_default"
                android:textStyle="bold"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/undoButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/controls_pad_margin_buttons"
                android:layout_weight="1.5"
                android:background="@drawable/button"
                android:lines="1"
                android:minHeight="@dimen/controls_pad_min_height_buttons"
                android:text="@string/main_ui_undo"
                android:textSize="@dimen/controls_text_size_default"
                android:textStyle="bold"
                tools:ignore="ButtonStyle"/>
        </TableRow>

        <!-- The last row is an optional row which is only needed for puzzles of grid size 7 -->
        <!-- or above. In case a button is added on the right the logic of hiding this row -->
        <!-- has to be revised! -->

        <TableRow
            android:id="@+id/controlsButtonRow3"
            android:layout_weight="1"
            android:visibility="gone">

            <Button
                android:id="@+id/digitPosition7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/controls_pad_margin_buttons"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:minHeight="@dimen/controls_pad_min_height_buttons"
                android:textSize="@dimen/controls_text_size_default"
                android:textStyle="bold"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/digitPosition8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/controls_pad_margin_buttons"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:minHeight="@dimen/controls_pad_min_height_buttons"
                android:textSize="@dimen/controls_text_size_default"
                android:textStyle="bold"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/digitPosition9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/controls_pad_margin_buttons"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:minHeight="@dimen/controls_pad_min_height_buttons"
                android:textSize="@dimen/controls_text_size_default"
                android:textStyle="bold"
                tools:ignore="ButtonStyle"/>

            <!-- placeholder to create empty space below clear and undo buttons. In case -->
            <!-- this space is used for a button, the login of hiding element lastRow has -->
            <!-- to be checked. -->

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/controls_pad_margin_buttons"
                android:layout_weight="1.5"
                android:lines="1"
                android:textSize="@dimen/controls_text_size_default"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>